php-src/ext/phar/tests/bug71488.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught BadMethodCallException: tar-based phar "/root/php-src/ext/phar/tests/bug71488.test" cannot be created, link "linkname...linkname...linkname...linkname...linkname...linkname...linkname...linkname...linkname...l" is too long for format in /root/php-src/ext/phar/tests/bug71488.php:3
Stack trace:
#0 /root/php-src/ext/phar/tests/bug71488.php(3): PharData->decompress('test')
#1 {main}
  thrown in /root/php-src/ext/phar/tests/bug71488.php on line 3
/root/php-src/Zend/zend_hash.c(1501) : ht=0x7ff55267f348 is already destroyed