php-src/ext/phar/tests/bug71488.php
<?php
$p = new PharData(__DIR__."/bug71488.tar");
$newp = $p->decompress("test");
?>

DONE
